--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "which": "^2.0.2"
   }
 }
