--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "klzz-react-cli",
+  "name": "klzz-cli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
-    "klzz-react-cli": "./bin/cli.js"
+    "klzz-cli": "./bin/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,8 @@
   "dependencies": {
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
+    "fs-extra": "^10.0.0",
+    "git-promise": "^1.0.0",
     "inquirer": "^8.0.0",
     "which": "^2.0.2"
   }
